go-api/templates/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-app-vs
  namespace: default   
spec:
  hosts:
    - "*"   
  gateways:
    - go-app-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: go-api.default.svc.cluster.local
            port:
              number: 8080
